# maya-cmds-stub-generator

./: .gitignore  README.md  generate-stubs.bat  pyproject.toml
cmds-stub-generator/: __init__.py  __main__.py  base_types.py  generator.py  header.py  populate_functions.py
cmds-stub-generator/documentaion/: command.py  index.py
cmds-stub-generator/documentation/: __init__.py
cmds-stub-generator/maya_info/: cmds_info.py
generated-stubs/2026/: cmds.pyi
generator/: README.md  pyproject.toml
generator/src/: __main__.py  base_types.py  generator.py  populate_functions.py
generator/src/documentation/: command.py
generator/src/resources/: create_return_types.jsonc  query_flag_modifiers.jsonc  query_return_types.jsonc  support_flags.jsonc
src/: __init__.py  __main__.py  docstring.py  flags.py  generator.py  populate_functions.py
src/cmds-stub-generator/: __main__.py  base_types.py  generator.py  populate_functions.py  template_header.py
src/cmds-stub-generator/documentation/: command.py
src/cmds-stub-generator/maya_info/: __init__.py  cmds_info.py
src/cmds-stub-generator/resources/: query_flag_modifiers.jsonc  query_return_types.jsonc  type_conversion.jsonc
src/documentation/: __init__.py
src/maya_info/: standalone.py
src/resources/: create_return_types.jsonc  type_conversion.jsonc  type_conversion_returns.jsonc
