[project]
name = "maya-cmds-stub-generator"
version = "2026.0.0"
authors = [{ name = "Nils Soderman" }]
description = ""
keywords = [
    "cmds",
    "maya",
    "autodesk",
    "stub",
    "stubfile",
    "generator",
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = ['Programming Language :: Python :: 3']
dependencies = [
    "beautifulsoup4==4.13.5",
]

[tool.setuptools.packages.find]
where = ["cmds-stub-generator"]
